Update format of code licensing value.

--- a/js-github/package.json
+++ b/js-github/package.json
@@ -2,7 +2,9 @@
   "name": "api-specimen-js-github",
   "description": "Testing basic, un/authorized calls to the Github v3 API.",
   "repository": "git@github.com:davewallace/api-specimen.git",
-  "license": "GPLv3",
+  "license": {
+  	"type": "GPLv3"
+  },
   "version": "0.1.0",
   "devDependencies": {
     "jquery": "^3.0.0"
