--- a/js-stackexchange/package.json
+++ b/js-stackexchange/package.json
@@ -2,7 +2,9 @@
   "name": "api-specimen-js-stackexchange",
   "description": "Testing basic, unauthorized calls to the stackexchange API.",
   "repository": "git@github.com:davewallace/api-specimen.git",
-  "license": "GPLv3",
+  "license": {
+  	"type": "GPLv3"
+  },
   "version": "0.1.0",
   "devDependencies": {
     "jquery": "^3.0.0"
